--- a/main.html
+++ b/main.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+<div class="testimonial-section">
+<div class="testimonial">
+<p class="text">"This product completely changed my experience! Highly recommended."</p>
+<p class="author">- Jhon Doe</p>
+</div>
+<div class="testimonial">
+<p class="text">"Excellent service and outstanding quality. I’m very satisfied!"</p>
+<p class="author">- John Smith</p>
+</div>
+</div>
 </body>
-
 </html>
+
